tests/baselines/reference/bigint-numeric-separator-literal-unicode-err.errors.txt
bigint-numeric-separator-literal-unicode-err.ts(35,2): error TS1005: ';' expected.
bigint-numeric-separator-literal-unicode-err.ts(35,2): error TS2304: Cannot find name '\u005F0123456789n'.


==== bigint-numeric-separator-literal-unicode-err.ts (2 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NonZeroDigit NumericLiteralSeparator DecimalDigits sequence expressed with
      unicode escape sequence
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    
      NumericLiteralSeparator::
        _
    
      DecimalIntegerLiteral::
        ...
        NonZeroDigit NumericLiteralSeparator_opt DecimalDigits
    
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt, numeric-separator-literal]
    ---*/
    
    
    1\u005F0123456789n;
     ~~~~~~~~~~~~~~~~~
!!! error TS1005: ';' expected.
     ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name '\u005F0123456789n'.
    